--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@
     "header header header" 120px
     "leftSidebar body rightSidebar" 1fr
     "footer footer footer" auto
-    / 120px 1fr 120px;
+    / 1fr 10px 10px;
   grid-gap: 16px;
 }
 
