--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,12 @@
-.myGrid {
+.mainGrid {
   width: 1366px;
   height: 750px;
   display: grid;
   grid: 
-    "header header header" 120px
-    "leftSidebar body rightSidebar" 1fr
-    "footer footer footer" auto
-    / 1fr 10px 10px;
+    "header" 0.5fr
+    "body" 1fr
+    "footer" 0.3fr
+    / 1fr;
   grid-gap: 16px;
 }
 
@@ -15,54 +15,26 @@
   grid-area: header;
 }
 
-.headerPos{
-  width:1366px;
-  height:25%;
-}
-
-.h2{
-  padding: 5px;
-}
-
-.headerParent{
-  width:100%;
-  height: 50%;
-  text-align: center;
-  position: relative;
-}
-
-.headerChild{
-  display : inline-block;
-}
-
 /*=========================   head   =========================*/
 
 /*=========================   body   =========================*/
 .body {
   grid-area: body;
+
 }
 
-.bodyInputForm{
-  width:65%;
-}
-
-.margin{
-  margin: 15px;
+.weatherInfo{
+  width: 1000px;
+  overflow-x: auto;
+  white-space: nowrap;
 }
 
 /*=========================   body   =========================*/
-.rightSidebar {
-  grid-area: rightSidebar;
-}
-
 .footer {
   grid-area: footer;
 }
 
-.myGrid > div {
-  background: #dddddd;
+.mainGrid > div {
+  background: #eeeeee;
 }
 
-.leftSidebar {
-  grid-area: leftSidebar;
-}
