--- a/views/index.html
+++ b/views/index.html
@@ -6,33 +6,43 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.4.1/chart.min.js"></script>
     <script src="/js/index.js"></script>
     <link href="/css/index.css" rel="stylesheet">
   </head>
   <body>
-    <section class='myGrid'>
+    <section class='mainGrid'>
       <div class='header'>
-        <div class='headerPos'></div>
-        <div class='headerParent'>
           <h2>날씨 보기 앱</h2>
-        </div>
-        <div class='headerPos'></div>
       </div>
-      <div class='leftSidebar'>
-        <div class="bodyInputForm">
-          <div class='margin'>
-            <button type="button" onclick="onClickgetWeather()">오늘의 날씨</button>
-          </div>
-        </div>
 
-        <div class="bodyInputForm">
-          <div id="result" class='margin'></div>
-        </div>
-      </div>
       <div class='body'>
-        
+
+        <!-- <div class="container">
+          <div class="row">
+            <div class="col-6 col-md-4">
+              <input type="text">
+            </div>
+            <div class="col-6 col-md-4">
+              <button type="button" onclick="onClickgetWeather()" class="btn btn-primary">오늘의 날씨</button>
+            </div>
+            <div class="col-6 col-md-4"></div>
+          </div>
+        </div> -->
+
+        <div class="weatherInfo" id="row">
+        </div>
+      
       </div>
-      <div class='rightSidebar'></div>
+
+      <div class='footer'>
+        <canvas id="myChart" width="400" height="300"></canvas>
+      </div>
     </section>
   </body>
+  <script>
+    // === include 'setup' then 'config' above ===
+    
+  </script>
+  
 </html>
