날씨 아이콘, 날씨 아이디 추가 (추후 아이콘 이미지 받아오게 처리)

--- a/css/index.css
+++ b/css/index.css
@@ -35,6 +35,14 @@
 }
 
 .mainGrid > div {
-  background: #eeeeee;
+  background: #fafafa;
 }
 
+
+.weatherBlock{
+  width: 210px;
+  height : 210px;
+  background-color: #e3f7ff;
+  padding: 10px;
+  margin: 10px;
+}
