ecosystem.config.js : 무한재실행 문제 해결 (.git 폴더가 원인) package.json : nodemon은 사용하지 않으므로 삭제 index.css : p 태그 폰트 크기 변경 index.js, index.html : 울산, 대구 추가

--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 .mainGrid {
-  width: 1000px;
+  width: 360px;
   height: 750px;
   display: grid;
   grid: 
@@ -24,7 +24,7 @@
 }
 
 .weatherInfo{
-  width: 1000px;
+  width: 360px;
   height: 400px;
   overflow-x: auto;
   white-space: nowrap;
@@ -46,7 +46,9 @@
   box-shadow: inset 0px 0px 5px white;
 }
 
-
+p{
+  font-size: 10pt;
+}
 
 /*=========================   body   =========================*/
 .footer {
@@ -58,10 +60,13 @@
 }
 
 
+/*
+ * 날씨정보를 불러오는 곳
+ */
 .weatherBlock{
-  width: 250px;
+  width: 200px;
   height : auto;
   display: inline-block;
   background-color: #ffffff;
-  padding: 10px;
+  padding: 5px;
 }
