--- a/css/errorpage.css
+++ b/css/errorpage.css
@@ -1,32 +1,16 @@
-.myGrid {
+.main{
+  width: 360px;
+  height: 550px;
+  border: 1px solid #000;
+  flex-direction: column;
+  display: flex;
+  justify-content: start;
+}
+
+.text{
   width: 100%;
-  height: 100vh;
-  display: grid;
-  background-color: #c5eaff;
-  grid: 
-      "header" 0.2fr
-      "body" 1fr 
-      "footer" 0.2fr
-      / 1fr;
-  grid-gap: 16px;
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.header {
-  grid-area: header;
-  background-color: #e0f9ff;
-}
-.body {
-  grid-area: body;
-  background-color: #e0f9ff;
-}
-.footer {
-  grid-area: footer;
-  background-color: #e0f9ff;
-}
-
-.errorBody{
-
-}
-
-/* .myGrid > div {
-  background: gray;
-} */
