--- a/views/errorpage.ejs
+++ b/views/errorpage.ejs
@@ -10,20 +10,11 @@
     <link href="/css/errorpage.css" rel="stylesheet">
   </head>
   <body>
-    <section class='myGrid'>
-      <div class='header'>
-        <div>
-          <h2>Errorpage</h2>
-        </div>
+    <div class="main">
+      <div class="text">
+        <h2>Error</h2>
+        <h3>오류가 발생하였습니다.</h3>
       </div>
-      <div class='body'>
-        <div>
-
-        </div>
-      </div>
-      <div class='footer'>
-        3
-      </div>
-    </section>
+    </div>
   </body>
 </html>
