--- a/views/index.html
+++ b/views/index.html
@@ -3,36 +3,27 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.4.1/chart.min.js"></script>
     <script src="/js/index.js"></script>
     <link href="/css/index.css" rel="stylesheet">
   </head>
   <body>
-    <section class='mainGrid'>
-      <div class='header'>
-          <h2>날씨 보기 앱</h2>
+    <div class="main">
+      <div class="title">
+        <h2>날씨 보기 앱</h2>
       </div>
-
-      <div class='body'>
-        <select name="location" id="location" onchange="onChangeLocation()">
+      <div class="selectArea">
+        <select class="selectBox" name="location" id="location" onchange="onChangeLocation()">
           <option value="" selected>지역 선택</option>
           <option value="Busan">부산</option>
           <option value="Seoul">서울</option>
           <option value="Ulsan">울산</option>
           <option value="Daegu">대구</option>
         </select>
-
-        <div class="weatherInfo" id="row">
-        </div>
       </div>
-    </section>
+      <div class="weatherInfo" id="row">
+      </div>
+    </div>
   </body>
-  <script>
-    // === include 'setup' then 'config' above ===
-    
-  </script>
   
 </html>
