--- a/views/css/index.css
+++ b/views/css/index.css
@@ -71,6 +71,6 @@ p{
   width: 200px;
   height : auto;
   display: inline-block;
-  background-color: #ffffff;
+  background-color: #f1f1f1;
   padding: 5px;
 }
