add weather.html, js, css

--- a/views/weather.html
+++ b/views/weather.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.4.1/chart.min.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRsZ_xrJ7k4rAqfbnIyQxKiyvaMtKdRuE&callback=initMap"></script>
-    <script src="/js/index.js"></script>
-    <link href="/css/index.css" rel="stylesheet">
+    <script src="/js/weather.js"></script>
+    <link href="/css/weather.css" rel="stylesheet">
   </head>
   <body>
     <div class="main">
@@ -20,6 +18,7 @@
           <option value="Seoul">서울</option>
           <option value="Ulsan">울산</option>
           <option value="Daegu">대구</option>
+          <option value="Gumi">구미</option>
           <option value="Gyeonggi-do">경기도</option>
         </select>
       </div>
